--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ pycvat = {git = "git@github.com:UGA-BSAIL/pycvat.git", rev = "34ee751"}
 pandas = "^1.2.3"
 loguru = "^0.5.3"
 numpy = ">=1.19.2,<1.20.0"
+spektral = "^1.0.5"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.2"
