--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,8 @@ license = "MIT"
 [tool.poetry.dependencies]
 python = "~3.8"
 tensorflow = "^2.4.1"
-kedro = "^0.17.1"
-pycvat = {git = "git@github.com:UGA-BSAIL/pycvat.git", rev = "34ee751"}
+kedro = {extras = ["matplotlib", "pandas"], version = "^0.17.1"}
+pycvat = {git = "git@github.com:UGA-BSAIL/pycvat.git", rev = "a7a0d510"}
 pandas = "^1.2.3"
 loguru = "^0.5.3"
 numpy = ">=1.19.2,<1.20.0"
