--- a/conf/base/catalog.yml
+++ b/conf/base/catalog.yml
@@ -1,4 +1,23 @@
-# Here you can define all your data sets by using simple YAML syntax.
-#
-# Documentation for this file format can be found in "The Data Catalog"
-# Link: https://kedro.readthedocs.io/en/stable/05_data/01_data_catalog.html
+# Cleaned and wrangled annotations.
+annotations_pandas:
+  type: pandas.ParquetDataSet
+  filepath: data/03_primary/annotations
+  versioned: True
+
+# Training data, as TFRecords.
+tfrecord_train:
+  type: cotton_flower_mot.data_sets.TfRecordsDataSet
+  filepath: data/05_model_input/train.tfrecord
+  versioned: True
+
+# Testing data, as TFRecords.
+tfrecord_test:
+  type: cotton_flower_mot.data_sets.TfRecordsDataSet
+  filepath: data/05_model_input/test.tfrecord
+  versioned: True
+
+# Training data, as TFRecords.
+tfrecord_valid:
+  type: cotton_flower_mot.data_sets.TfRecordsDataSet
+  filepath: data/05_model_input/valid.tfrecord
+  versioned: True
