--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ pandas = "^1.2.3"
 loguru = "^0.5.3"
 numpy = ">=1.19.2,<1.20.0"
 spektral = "^1.0.5"
+seaborn = "^0.11.1"
+matplotlib = "^3.3.4"
+pydantic = "^1.8.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.2"
@@ -22,6 +25,9 @@ pytest-black = "^0.3.12"
 black = "^20.8b1"
 isort = "^5.7.0"
 pre-commit = "^2.11.0"
+pytest-snapshot = "^0.5.0"
+Faker = "^6.6.2"
+pytest-coverage = "^0.0"
 
 [tool.black]
 line-length = 79
