Get the model to train without crashing.

--- a/conf/base/catalog.yml
+++ b/conf/base/catalog.yml
@@ -27,3 +27,30 @@ tfrecord_valid:
   filepath: data/05_model_input/valid
   extension: .tfrecord
   versioned: True
+
+# Intermediate TF Datasets containing pre-processed data.
+training_data:
+  type: MemoryDataSet
+  copy_mode: assign
+
+testing_data:
+  type: MemoryDataSet
+  copy_mode: assign
+
+validation_data:
+  type: MemoryDataSet
+  copy_mode: assign
+
+_model_args: &model_args
+  type: tensorflow.TensorFlowModelDataset
+  load_args:
+    # Compiling during loading doesn't work with custom loss functions.
+    compile: False
+  save_args:
+    save_format: h5
+  versioned: True
+
+# Saved model, produced at the end of training.
+trained_model:
+  filepath: ${output_data_dir}/06_models/fully_trained.hd5
+  << : *model_args
