--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,9 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = "~3.8"
-tensorflow = "^2.4.1"
+# Using a release candidate here for better RaggedTensor support in Keras.
+# TODO (danielp) Switch to the actual release once it comes out.
+tensorflow = "^2.5.0-rc0"
 kedro = {extras = ["matplotlib", "pandas"], version = "^0.17.1"}
 pycvat = {git = "git@github.com:UGA-BSAIL/pycvat.git", rev = "a7a0d510"}
 pandas = "^1.2.3"
