--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ spektral = "^1.0.5"
 seaborn = "^0.11.1"
 matplotlib = "^3.3.4"
 pydantic = "^1.8.1"
+scipy = "^1.6.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.2"
