--- a/conf/base/parameters/model_training.yml
+++ b/conf/base/parameters/model_training.yml
@@ -12,6 +12,14 @@ positive_sample_weight: 3.0
 # Batch size to use for training.
 batch_size: 16
 
+# Tensorboard parameters.
+# Log directory.
+tensorboard_output_dir: ${log_dir}/tensorboard
+# Period at which to write histograms, in epochs.
+histogram_period: 2
+# Period at which to write metrics, in batches.
+update_period: 100
+
 # Learning phases to use for training the model.
 learning_phases:
   # The initial learning rate to use for the phase.
