--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ seaborn = "^0.11.1"
 matplotlib = "^3.3.4"
 pydantic = "^1.8.1"
 scipy = "^1.6.2"
+opencv-python = "^4.5.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.2"
