--- a/conf/base/parameters/model_data_load.yml
+++ b/conf/base/parameters/model_data_load.yml
@@ -6,3 +6,8 @@ num_appearance_features: 256
 num_gcn_channels: 256
 # Sinkhorn normalization Lambda value.
 sinkhorn_lambda: 10.0
+
+# Probability of dropping a particular example to use.
+drop_probability: 0.95
+# Number of times to repeat the dataset to make up for dropped examples.
+repeats: 23
