Fix an issue with dataset generation.
This was causing it to pull frames from the wrong source video.

--- a/conf/base/parameters/build_tfrecords.yml
+++ b/conf/base/parameters/build_tfrecords.yml
@@ -1,4 +1,4 @@
 # Specific clips to use for testing.
-test_clips: [4, 16]
+test_clips: [14, 21, 23]
 # Specific clips to use for validation.
-valid_clips: [1, 10]
+valid_clips: [26, 12, 20]
