--- a/conf/base/pipelines/data_engineering/catalog.yml
+++ b/conf/base/pipelines/data_engineering/catalog.yml
@@ -2,10 +2,15 @@ _cvat_credentials: &cvat_credentials
   host: "http://localhost:8080/api/v1"
   credentials: dev_cvat
 
-# CVAT dataset containing raw frame data.
-cotton_videos:
+# CVAT datasets containing raw frame data.
+cotton_videos_169:
   type: pycvat.CvatDataSet
   task_id: 169
+  << : *cvat_credentials
+
+cotton_videos_170:
+  type: pycvat.CvatDataSet
+  task_id: 170
   << : *cvat_credentials
 
 # Raw annotations, in MOT 1.1 format, corresponding to the frames.
