Add additional data augmentation.

--- a/conf/base/parameters/model_data_load.yml
+++ b/conf/base/parameters/model_data_load.yml
@@ -10,6 +10,18 @@ sinkhorn_lambda: 10.0
 # Amount of random jitter to add to the bounding boxes when training, as
 # a fraction of the frame size.
 bbox_jitter_fraction: 0.01
+# Maximum amount to adjust brightness by.
+max_brightness_delta: 0.1
+# Minimum contrast factor to use.
+min_contrast: 0.9
+# Maximum contrast factor to use.
+max_contrast: 1.1
+# Maximum amount to adjust hue by.
+max_hue_delta: 0.1
+# Minimum saturation factor to use.
+min_saturation: 0.9
+# Maximum saturation factor to use.
+max_saturation: 1.1
 
 # Probability of dropping a particular example to use.
 drop_probability: 0.75
