--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ matplotlib = "^3.3.4"
 pydantic = "^1.8.1"
 scipy = "^1.6.2"
 opencv-python = "^4.5.1"
+tensorflow-addons = "^0.13.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.2"
