--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ license = "MIT"
 python = "~3.8"
 tensorflow = "~2.5.0"
 kedro = {extras = ["matplotlib", "pandas"], version = "^0.17.1"}
-pycvat = {git = "git@github.com:UGA-BSAIL/pycvat.git", rev = "a7a0d510"}
+pycvat = {path = "pycvat", develop = false}
 pandas = "^1.2.3"
 loguru = "^0.5.3"
 numpy = ">=1.19.2,<1.20.0"
