--- a/conf/base/parameters/model_training.yml
+++ b/conf/base/parameters/model_training.yml
@@ -21,6 +21,11 @@ loss_params:
   # Weight to use for offset regression loss.
   offset_weight: 1.0
 
+# Weights for each loss term.
+heatmap_loss_weight: 1000.0
+geometry_loss_weight: 1.0
+ciou_loss_weight: 1.0
+
 # Learning phases to use for training the model.
 learning_phases:
   # The initial learning rate to use for the phase.
