--- a/conf/base/parameters/model_config.yml
+++ b/conf/base/parameters/model_config.yml
@@ -1,7 +1,9 @@
 # Shape of the input detection crops, in the form of height, width, channels.
 image_input_shape: [100, 100, 3]
 # Shape of the raw video frames, in the form of height, width, channels.
-frame_input_shape: [540, 960, 3]
+frame_input_shape: [1080, 1920, 3]
+# Shape of the input to the detection model.
+detection_model_input_shape: [540, 960, 3]
 # Number of appearance features to generate.
 num_appearance_features: 128
 # Number of GCN output channels to use.
