--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ pydantic = "^1.8.1"
 scipy = "^1.6.2"
 opencv-python = "^4.5.1"
 tensorflow-addons = "^0.13.0"
+tenacity = "^8.0.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.2"
