--- a/conf/base/pipelines/auto_annotation/catalog.yml
+++ b/conf/base/pipelines/auto_annotation/catalog.yml
@@ -2,16 +2,15 @@ _cvat_credentials: &cvat_credentials
   host: "http://localhost:8080/api/v1"
   credentials: dev_cvat
 
-# CVAT datasets containing raw frame data.
-cotton_videos_190:
-  type: pycvat.CvatDataSet
-  task_id: 190
-  << : *cvat_credentials
-
 # Intermediate datasets containing raw bounding box detections.
 raw_detections_190:
   type: pandas.ParquetDataSet
   filepath: data/07_model_output/raw_detections/task_190.parquet
+  versioned: true
+
+raw_detections_191:
+  type: pandas.ParquetDataSet
+  filepath: data/07_model_output/raw_detections/task_191.parquet
   versioned: true
 
 # Converted annotations, in MOT 1.1 format.
@@ -33,7 +32,11 @@ _mot_csv_parameters: &mot_csv_parameters
       - class_id
       - visibility
 
-# Raw annotations, in MOT 1.1 format, corresponding to the frames.
-annotations_mot_1_1_190:
-  filepath: data/01_raw/flower_annotations_190/gt.txt
+# Automatic annotations, in MOT 1.1 format, corresponding to the frames.
+auto_annotations_mot_1_1_190:
+  filepath: data/02_intermediate/flower_annotations_190_auto/gt.txt
+  << : *mot_csv_parameters
+
+auto_annotations_mot_1_1_191:
+  filepath: data/02_intermediate/flower_annotations_191_auto/gt.txt
   << : *mot_csv_parameters
