--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ scipy = "^1.6.2"
 opencv-python = "^4.5.1"
 tensorflow-addons = "^0.13.0"
 tenacity = "^8.0.1"
+tensorflow-datasets = "^4.4.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.2"
