--- a/conf/base/parameters/model_training.yml
+++ b/conf/base/parameters/model_training.yml
@@ -21,15 +21,13 @@ enable_numeric_checks: false
 
 loss_params:
   # Alpha constant for heatmap focal loss.
-  alpha: 2.0
-  # Beta constant for heatmap focal loss.
-  beta: 4.0
+  alpha: 0.25
+  # Gamma constant for heatmap focal loss.
+  gamma: 2.0
   # Weight to use for size regression loss.
   size_weight: 1.0
   # Weight to use for offset regression loss.
   offset_weight: 1.0
-  # Weight to use for positive examples in heatmap loss.
-  positive_loss_weight: 1.0
 
 # Weights for each loss term.
 heatmap_loss_weight: 1.0
