--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ tensorflow-addons = "^0.13.0"
 tenacity = "^8.0.1"
 tensorflow-datasets = "^4.4.0"
 tensorflow = "2.5"
+focal-loss = "^0.0.7"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.2"
