--- a/conf/base/parameters/model_training.yml
+++ b/conf/base/parameters/model_training.yml
@@ -21,9 +21,9 @@ enable_numeric_checks: false
 
 loss_params:
   # Alpha constant for heatmap focal loss.
-  alpha: 0.25
-  # Gamma constant for heatmap focal loss.
-  gamma: 4.0
+  alpha: 2.0
+  # Beta constant for heatmap focal loss.
+  beta: 4.0
   # Weight to use for size regression loss.
   size_weight: 1.0
   # Weight to use for offset regression loss.
@@ -31,7 +31,7 @@ loss_params:
 
 # Weights for each loss term.
 heatmap_loss_weight: 1.0
-geometry_loss_weight: 0.01
+geometry_loss_weight: 0.1
 ciou_loss_weight: 0.0
 
 # Learning phases to use for training the model.
