--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,21 +7,23 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = "~3.8"
-kedro = {extras = ["matplotlib", "pandas"], version = "^0.17.1"}
+kedro = {extras = ["matplotlib", "pandas"], version = "0.17.7"}
 pycvat = {path = "pycvat", develop = false}
-pandas = "^1.2.3"
+pandas = "1.2.5"
 loguru = "^0.5.3"
 spektral = "^1.0.5"
 seaborn = "^0.11.1"
 matplotlib = "^3.3.4"
 pydantic = "^1.8.1"
 scipy = "^1.6.2"
-opencv-python = "^4.5.1"
+opencv-python = "4.5.2.54"
 tensorflow-addons = "^0.13.0"
 tenacity = "^8.0.1"
 tensorflow-datasets = "^4.4.0"
-tensorflow = "2.5"
-focal-loss = "^0.0.7"
+tensorflow = "2.5.3"
+numpy = "1.19.5"
+opencv-contrib-python = "4.5.2.54"
+google-cloud-bigquery = "2.20.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.2"
