Get RotNet pipeline to work.

--- a/conf/base/catalog.yml
+++ b/conf/base/catalog.yml
@@ -33,6 +33,7 @@ tfrecord_unannotated:
   type: PartitionedDataSet
   dataset:
     type: cotton_flower_mot.data_sets.TfRecordsDataSet
+    verbose: false
   path: data/05_model_input/unannotated
 
 # Intermediate TF Datasets containing pre-processed data.
