--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,9 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = "~3.8"
-kedro = {extras = ["matplotlib", "pandas"], version = "0.17.7"}
+kedro = {extras = ["matplotlib", "pandas"], version = "^0.18.1"}
 pycvat = {path = "pycvat", develop = false}
-pandas = "1.2.5"
+pandas = "1.4.2"
 loguru = "^0.5.3"
 spektral = "^1.0.5"
 seaborn = "^0.11.1"
@@ -24,12 +24,13 @@ tensorflow = "2.9"
 numpy = "1.22"
 opencv-contrib-python = "4.5.2.54"
 google-cloud-bigquery = "2.20.0"
+tqdm = "^4.64.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.2"
 pytest-mock = "^3.5.1"
 pytest-black = "^0.3.12"
-black = "^20.8b1"
+black = "^22.3.0"
 isort = "^5.7.0"
 pre-commit = "^2.11.0"
 pytest-snapshot = "^0.5.0"
@@ -38,6 +39,7 @@ pytest-coverage = "^0.0"
 PyYAML = "^5.4.1"
 pytest-flake8 = "^1.0.7"
 pydot = "^1.4.2"
+jupyterlab = "^3.4.2"
 
 [tool.black]
 line-length = 79
@@ -61,7 +63,7 @@ skip = "('.eggs', '.git', '.venv', 'build', 'dist')"
 [tool.kedro]
 package_name = "cotton_flower_mot"
 project_name = "Cotton Flower MOT"
-project_version = "0.17.1"
+project_version = "0.18.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
