--- a/conf/base/catalog.yml
+++ b/conf/base/catalog.yml
@@ -28,13 +28,21 @@ tfrecord_valid:
   extension: .tfrecord
   versioned: True
 
-# Unannotated data, as TFRecords.
-tfrecord_unannotated:
+# Unannotated data, as TFRecords, with the robot frame minimally visible.
+tfrecord_unannotated_no_wheel:
   type: PartitionedDataSet
   dataset:
     type: cotton_flower_mot.data_sets.TfRecordsDataSet
     verbose: false
-  path: data/05_model_input/unannotated
+  path: data/05_model_input/unannotated/no_wheel
+
+# Same, but with the robot structure visible.
+tfrecord_unannotated_wheel:
+  type: PartitionedDataSet
+  dataset:
+    type: cotton_flower_mot.data_sets.TfRecordsDataSet
+    verbose: false
+  path: data/05_model_input/unannotated/wheel
 
 # Intermediate TF Datasets containing pre-processed data.
 training_data:
@@ -46,6 +54,10 @@ testing_data:
   copy_mode: assign
 
 validation_data:
+  type: MemoryDataSet
+  copy_mode: assign
+
+unannotated_data:
   type: MemoryDataSet
   copy_mode: assign
 
