--- a/conf/base/parameters/training.yml
+++ b/conf/base/parameters/training.yml
@@ -1,3 +1,8 @@
+# Batch size to use for training.
+batch_size: 16
+# Batch size to use for training RotNet
+rot_net_batch_size: 8
+
 # Tensorboard parameters.
 # Log directory.
 tensorboard_output_dir: ${log_dir}/tensorboard
@@ -33,11 +38,6 @@ loss_params:
 heatmap_loss_weight: 1.0
 geometry_loss_weight: 0.1
 
-# How many epochs of no improvement we tolerate before reducing the LR.
-lr_patience_epochs: 20
-# Minimum LR to use.
-min_lr: 0.00001
-
 # Learning phases to use for training the model.
 learning_phases:
   # The initial learning rate to use for the phase.
@@ -53,9 +53,37 @@ learning_phases:
       t_mul: 2.0
       # Used to derive the initial learning rate of the i-th period.
       m_mul: 1.0
+      # How many epochs of no improvement we tolerate before reducing the LR,
+      # if we are not using SGDR.
+      lr_patience_epochs: 20
       # Minimum learning rate to hit.
       min_learning_rate: 0.00001
     # The momentum to use for the phase.
     momentum: 0.9
     # Number of epochs to train for in this phase.
     num_epochs: 100
+
+# Learning phases for training RotNet.
+rotnet_learning_phases:
+  # The initial learning rate to use for the phase.
+  - learning_rate:
+      # Initial learning rate value.
+      initial: 0.001
+      # Specify that we want to decay over time.
+      decay: false
+      # Number of steps to decay over.
+      # (440 steps per epoch)
+      decay_steps: 1320
+      # Used to derive the number of iterations in the i-th period.
+      t_mul: 2.0
+      # Used to derive the initial learning rate of the i-th period.
+      m_mul: 1.0
+      # How many epochs of no improvement we tolerate before reducing the LR,
+      # if we are not using SGDR.
+      lr_patience_epochs: 2
+      # Minimum learning rate to hit.
+      min_learning_rate: 0.00001
+    # The momentum to use for the phase.
+    momentum: 0.9
+    # Number of epochs to train for in this phase.
+    num_epochs: 6
