--- a/conf/base/parameters/training.yml
+++ b/conf/base/parameters/training.yml
@@ -38,6 +38,10 @@ loss_params:
 heatmap_loss_weight: 1.0
 geometry_loss_weight: 0.1
 
+# Fraction of pre-trained layers to keep frozen when performing
+# transfer learning.
+freeze_fraction: 0.5
+
 # Learning phases to use for training the model.
 learning_phases:
   # The initial learning rate to use for the phase.
