Improve startup time.
This is done mostly by avoiding unnecessary model saves and loads.

--- a/conf/base/catalog.yml
+++ b/conf/base/catalog.yml
@@ -91,6 +91,20 @@ _model_args: &model_args
     save_format: h5
   versioned: True
 
+# Don't bother copying the untrained model, as this wastes a lot of time
+# if your disk is slow.
+initial_model:
+  type: MemoryDataSet
+  copy_mode: assign
+
+initial_rotnet_model:
+  type: MemoryDataSet
+  copy_mode: assign
+
+encoder_model:
+  type: MemoryDataSet
+  copy_mode: assign
+
 # Saved model, produced at the end of training.
 trained_model:
   filepath: ${output_data_dir}/06_models/fully_trained.hd5
